[tool.poetry]
name = "expense-tracker-plus"
version = "0.1.0"
description = ""
authors = ["Matan Peretz <matanperetz@outlook.com>"]
readme = "README.md"
packages = [{include = "expense_tracker_plus", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.1.0"
pyright = "^1.1.324"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.vscode
)/
'''

[tool.isort]
# make it compatible with black
profile = "black" 
